--- a/Ek-ecommerce/resources/views/404.edge
+++ b/Ek-ecommerce/resources/views/404.edge
@@ -3,10 +3,10 @@
 @section('content')
     <div class="container text-center">
         <div class="logo-404">
-            <a href="/"><img src="images/home/logo.png" alt="" /></a>
+            <a href="/"><img src="/images/home/logo.png" alt="" /></a>
         </div>
         <div class="content-404">
-            <img src="images/404/404.png" class="img-responsive" alt="" />
+            <img src="/images/404/404.png" class="img-responsive" alt="" />
             <h1><b>OPPS!</b> We Couldn’t Find this Page</h1>
             <p>Sorry! The page you are looking is not available at the moment.</p>
             <h2><a href="/">Bring me back Home</a></h2>
