--- a/Ek-ecommerce/resources/views/layouts/partials/_header.edge
+++ b/Ek-ecommerce/resources/views/layouts/partials/_header.edge
@@ -33,7 +33,7 @@
             <div class="row">
                 <div class="col-md-4 clearfix">
                     <div class="logo pull-left">
-                        <a href="/"><img src="images/home/logo-colorful.png" alt="" /></a>
+                        <a href="/"><img src="/images/home/logo-colorful.png" alt="" /></a>
                     </div>
                     
                 </div>
@@ -44,7 +44,8 @@
                             <li><a href=""><i class="fa fa-star"></i> Wishlist</a></li>
                             <li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
                             <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-                            <li><a href="login.html"><i class="fa fa-lock"></i> Login</a></li>
+                            <li><a href="{{ route('users.loginShow') }}"><i class="fa fa-lock"></i> Login</a></li>
+                            <li><a href="{{ route('users.create') }}"><i class="fa fa-lock"></i> Register</a></li>
                         </ul>
                     </div>
                 </div>
