--- a/Ek-ecommerce/resources/views/layouts/partials/_header.edge
+++ b/Ek-ecommerce/resources/views/layouts/partials/_header.edge
@@ -44,8 +44,8 @@
                             <li><a href=""><i class="fa fa-star"></i> Wishlist</a></li>
                             <li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
                             <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-                            <li><a href="{{ route('users.loginShow') }}"><i class="fa fa-lock"></i> Login</a></li>
-                            <li><a href="{{ route('users.create') }}"><i class="fa fa-lock"></i> Register</a></li>
+                            <li><a href="{{ route('auth.loginShow') }}"><i class="fa fa-lock"></i> Login</a></li>
+                            <li><a href="{{ route('auth.signupShow') }}"><i class="fa fa-lock"></i> Sign up</a></li>
                         </ul>
                     </div>
                 </div>
