--- a/Ek-ecommerce/resources/views/layouts/partials/_scripts.edge
+++ b/Ek-ecommerce/resources/views/layouts/partials/_scripts.edge
@@ -4,3 +4,5 @@
 <script src="/js/price-range.js"></script>
 <script src="/js/jquery.prettyPhoto.js"></script>
 <script src="/js/main.js"></script>
+<script src="/js/loginError.js"></script>
+<script src="/js/signupError.js"></script>
