--- a/Ek-ecommerce/resources/views/layouts/partials/_header.edge
+++ b/Ek-ecommerce/resources/views/layouts/partials/_header.edge
@@ -40,12 +40,24 @@
                 <div class="col-md-8 clearfix">
                     <div class="shop-menu clearfix pull-right">
                         <ul class="nav navbar-nav">
-                            <li><a href=""><i class="fa fa-user"></i> Account</a></li>
+                            <li><a href=""><i class="fa fa-user"></i> 
+                                @if(auth.user)
+                                {{ auth.user.username }}
+                                @else
+                                Account
+                                @endif
+                                </a></li>
                             <li><a href=""><i class="fa fa-star"></i> Wishlist</a></li>
                             <li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
                             <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+                            @if(!auth.user)
                             <li><a href="{{ route('auth.loginShow') }}"><i class="fa fa-lock"></i> Login</a></li>
                             <li><a href="{{ route('auth.signupShow') }}"><i class="fa fa-lock"></i> Sign up</a></li>
+                            @endif
+
+                            @if(auth.user)
+                            <li><a href="{{ route('auth.logout') }}"><i class="fa fa-lock"></i> Logout</a></li>
+                            @endif
                         </ul>
                     </div>
                 </div>
