--- a/Ek-ecommerce/resources/views/auth/loginShow.edge
+++ b/Ek-ecommerce/resources/views/auth/loginShow.edge
@@ -19,8 +19,8 @@
 
                 <form action="{{ route('auth.login')}}" method="POST">
                     <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" name="email" placeholder="Email Address" required />
+                        <label for="email">Username or Email</label>
+                        <input type="text" name="uid" placeholder="Username or Email Address" required />
                     </div>
 
                     <div class="form-group">
