--- a/Ek-ecommerce/resources/views/layouts/main/index.edge
+++ b/Ek-ecommerce/resources/views/layouts/main/index.edge
@@ -5,6 +5,7 @@
 <body>
 @include('layouts/main/partials/_header')
 
+{{--  {{inspect(flashMessages.all())}}  --}}
 @!section('content')
 
 @include('layouts/main/partials/_footer')
