--- a/Ek-ecommerce/resources/views/layouts/dashboard/partials/_scripts.edge
+++ b/Ek-ecommerce/resources/views/layouts/dashboard/partials/_scripts.edge
@@ -15,9 +15,7 @@
 <script src="/js/demo/chart-area-demo.js"></script>
 <script src="/js/demo/chart-pie-demo.js"></script>
 
-{{--  Custom jquery for login error messages timeout  --}}
-<script src="/js/loginError.js"></script>
-<script src="/js/signupError.js"></script>
+{{--  Custom jquery for error messages  --}}
 <script src="/js/messages.js"></script>
 
 {{--  Custom jquery for changing text-color to white for bg-success  --}}
