--- a/Ek-ecommerce/resources/views/layouts/main/partials/_scripts.edge
+++ b/Ek-ecommerce/resources/views/layouts/main/partials/_scripts.edge
@@ -5,6 +5,5 @@
 <script src="/js/jquery.prettyPhoto.js"></script>
 <script src="/js/main.js"></script>
 
-{{--  Custom jquery for login error messages timeout  --}}
-<script src="/js/loginError.js"></script>
-<script src="/js/signupError.js"></script>
+{{--  Custom jquery for error messages --}}
+<script src="/js/messages.js"></script>
