Users management now uses roles table instead of the Role enum

--- a/Ek-ecommerce/resources/views/dashboard/users/create.edge
+++ b/Ek-ecommerce/resources/views/dashboard/users/create.edge
@@ -50,7 +50,7 @@
                     <label for="roleId">Role</label>
                     <select name="roleId" id="roleId" class="form-control">
                         @each(role in roles)
-                        <option value="{{role.value}}">{{role.key}}</option>
+                        <option value="{{role.id}}">{{role.name}}</option>
                         @endeach
                     </select>
                 </div>              
