--- a/Ek-ecommerce/resources/views/dashboard/users/edit.edge
+++ b/Ek-ecommerce/resources/views/dashboard/users/edit.edge
@@ -47,10 +47,10 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="role_id">Role</label>
-                    <select name="role_id" id="role_id" class="form-control">
+                    <label for="roleId">Role</label>
+                    <select name="roleId" id="roleId" class="form-control">
                         @each(role in roles)
-                        <option value="{{role.value}}">{{role.key}}</option>
+                        <option value="{{role.id}}">{{role.name}}</option>
                         @endeach
                     </select>
                 </div>              
