Role CRUD with role validators and views

--- a/Ek-ecommerce/resources/views/dashboard/index.edge
+++ b/Ek-ecommerce/resources/views/dashboard/index.edge
@@ -1,5 +1,7 @@
 @layout('layouts/dashboard/index')
 
 @section('content')
-<h1> This is the home page of dashboard</h1>
+<div class="d-sm-flex align-items-center justify-content-center mb-4">
+    <h1 class="h3 mb-0 text-gray-800">This is the home page of dashboard</h1>
+</div>
 @endsection
