--- a/Ek-ecommerce/resources/views/layouts/dashboard/partials/_sidebar.edge
+++ b/Ek-ecommerce/resources/views/layouts/dashboard/partials/_sidebar.edge
@@ -39,7 +39,7 @@
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Manage:</h6>
                 <a class="collapse-item" href="{{ route('dashboard.users.index') }}">Users</a>
-                <a class="collapse-item" href="#">Roles</a>
+                <a class="collapse-item" href="{{ route('dashboard.roles.index') }}">Roles</a>
             </div>
         </div>
     </li>
