--- a/Ek-ecommerce/resources/views/layouts/dashboard/index.edge
+++ b/Ek-ecommerce/resources/views/layouts/dashboard/index.edge
@@ -25,7 +25,7 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                    <div class="d-sm-flex align-items-center justify-content-center mb-4">
                         <h1 class="h3 mb-0 text-gray-800">{{title}}</h1>
                         
                     </div>
