Password reset feature Password reset feature implemented with mail package. Migration for altering users table to add 'password_reset_token' attribute. Signed URL for the password reset route. New validators for validating the forgot-password email field and reset-password password/confirmation fields.

--- a/Ek-ecommerce/resources/views/main/auth/loginShow.edge
+++ b/Ek-ecommerce/resources/views/main/auth/loginShow.edge
@@ -14,7 +14,7 @@
                 <form action="{{ route('auth.login')}}" method="POST">
                     {{ csrfField() }}
                     <div class="form-group">
-                        <label for="email">Username or Email</label>
+                        <label for="uid">Username or Email</label>
                         <input type="text" name="uid" placeholder="Username or Email Address" required />
                     </div>
 
@@ -35,6 +35,12 @@
                     Don't have an account yet?
                     <a href="{{ route('auth.signupShow') }}">
                         Sign up here
+                    </a>
+                </div>
+
+                <div class="text-primary" style="margin-top:20px">                    
+                    <a href="{{ route('auth.forgotPasswordShow') }}">
+                        Forgot password?
                     </a>
                 </div>
             </div>
