--- a/Ek-ecommerce/resources/views/main/passwordReset/_messages.edge
+++ b/Ek-ecommerce/resources/views/main/passwordReset/_messages.edge
@@ -13,6 +13,16 @@
 </div>                  
 @endif
 
+{{--  for successfully sending mail  --}}
+@if(flashMessages.has('success'))
+    <div class="alert alert-success mt-2 auto-hide  messages" role="alert" >
+        <strong>{{flashMessages.get('success')}}</strong>
+        <button type="button" class="close" data-dismis="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+@endif
+
 {{--  for invalid credentials  --}}
 @if(flashMessages.has('errors_invalid_credentials'))
 <div class="alert alert-danger mt-2 messages" role="alert">
@@ -36,15 +46,4 @@
     </button>
 </div>                  
 @endif
-
-{{--  for successfully changing password after password-reset  --}}
-@if(flashMessages.has('success'))
-    <div class="alert alert-success mt-2 auto-hide  messages" role="alert" >
-        <strong>{{flashMessages.get('success')}}</strong>
-        <button type="button" class="close" data-dismis="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-@endif
-
 
