--- a/Ek-ecommerce/public/css/main.css
+++ b/Ek-ecommerce/public/css/main.css
@@ -1390,7 +1390,7 @@ h2.title {
 .content-404 h1 {
     color: #363432;
     font-family: 'Roboto', sans-serif;
-    font-size: 41px;
+    font-size: 35px;
     font-weight: 300;
 }
 
@@ -1406,17 +1406,17 @@ h2.title {
     font-size: 18px;
 }
 
-.content-404 h2 {
-    margin-top: 50px;
+.content-404 h3 {
+    margin-top: 30px;
 }
 
-.content-404 h2 a {
+.content-404 h3 a {
     background: #FE980F;
     color: #FFFFFF;
     font-family: 'Roboto', sans-serif;
-    font-size: 44px;
+    font-size: 30px;
     font-weight: 300;
-    padding: 8px 40px;
+    padding: 5px;
 }
 
 
