--- a/Ek-ecommerce/resources/views/main/error404.edge
+++ b/Ek-ecommerce/resources/views/main/error404.edge
@@ -1,15 +1,28 @@
 @layout('layouts/main/index')
 
 @section('content')
-    <div class="container text-center">
+    <div class="container text-center d-flex flex-column">
+        {{--  for rate limit exceeded  --}}
+        @if(flashMessages.has('errors_rate_limit'))
+        <div class="alert alert-danger mt-2 messages" role="alert" style="display:inline-block">
+            <strong>
+                {{ flashMessages.get('errors_rate_limit') }}
+            </strong>
+            <button type="button" class="close" data-dismis="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>                  
+        @endif
+
         <div class="logo-404">
             <a href="/"><img src="/images/home/logo.png" alt="" /></a>
-        </div>
+        </div>        
+
         <div class="content-404">
             <img src="/images/404/404.png" class="img-responsive" alt="" />
-            <h1><b>OPPS!</b> We Couldn’t Find this Page</h1>
-            <p>Sorry! The page you are looking is not available at the moment.</p>
-            <h2><a href="/">Bring me back Home</a></h2>
+            <h1><b>OOPS!</b> We Couldn’t Find this Page</h1>
+            
+            <h3><a href="/">Bring me back Home</a></h3>
         </div>
     </div>
 @endsection
