--- a/Ek-ecommerce/resources/views/main/passwordReset/resetPasswordShow.edge
+++ b/Ek-ecommerce/resources/views/main/passwordReset/resetPasswordShow.edge
@@ -11,7 +11,7 @@
                 @include('main/passwordReset/_messages')
 
                 <!--Password change email form-->
-                <form action="{{ route('auth.resetPassword', {email: userWithResetToken.email}) }}" method="POST">
+                <form action="{{ route('auth.resetPassword', { email: userWithResetToken.email }, { qs: { _method: 'PUT' } }) }}" method="POST">
                     {{ csrfField() }}
                     <input type="hidden" name="passwordResetToken" value="{{userWithResetToken.passwordResetToken}}">
 
