Delete confirmation for roles jQuery implementation for 'confirm delete modal' of roles. Also the front end uses Ajax calls to send 'dashboard.roles.destroy' request. So I had to do an API implementation of the dashboard.roles.destroy route controller.

--- a/Ek-ecommerce/resources/views/layouts/dashboard/partials/_head.edge
+++ b/Ek-ecommerce/resources/views/layouts/dashboard/partials/_head.edge
@@ -5,6 +5,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    {{--  csrf token to extract and use in ajax calls  --}}
+    <meta name="csrf-token" content="{{ csrfToken }}">
+
     <link rel="apple-touch-icon" sizes="57x57" href="https://ekbana.com/frontend/assets/favicons/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="https://ekbana.com/frontend/assets/favicons/apple-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="https://ekbana.com/frontend/assets/favicons/apple-icon-72x72.png">
