--- a/Ek-ecommerce/resources/views/layouts/dashboard/partials/_scripts.edge
+++ b/Ek-ecommerce/resources/views/layouts/dashboard/partials/_scripts.edge
@@ -8,15 +8,11 @@
 <!-- Custom scripts for all pages-->
 <script src="/js/sb-admin-2.min.js"></script>
 
-<!-- Page level plugins -->
-<script src="/vendor/chart.js/Chart.min.js"></script>
-
-<!-- Page level custom scripts -->
-<script src="/js/demo/chart-area-demo.js"></script>
-<script src="/js/demo/chart-pie-demo.js"></script>
-
 {{--  Custom jquery for error messages  --}}
 <script src="/js/messages.js"></script>
 
 {{--  Custom jquery for changing text-color to white for bg-success  --}}
 <script src="/js/textForBgSuccess.js"></script>
+
+{{--  Custom jquery for role/user delete confirmation and ajax call  --}}
+<script src="/js/deleteRole.js"></script>
