--- a/Ek-ecommerce/resources/views/dashboard/roles/index.edge
+++ b/Ek-ecommerce/resources/views/dashboard/roles/index.edge
@@ -17,7 +17,7 @@
         </thead>
         <tbody class="text-center">
             @each(role in roles)
-            <tr>
+            <tr data-id="{{role.id}}" class="random">
                 <td >
                     {{role.name}}
                 </td>
@@ -25,10 +25,8 @@
                 <td>{{role.permissions}}</td>
                 <td class="d-flex">
                     <a href="{{ route('dashboard.roles.edit', { id: role.id }) }}" class="btn btn-sm btn-warning">Edit</a>
-                    <form action="{{ route('dashboard.roles.destroy', { id: role.id }, { qs: { _method: 'DELETE' }}) }}" method="post">
-                        {{ csrfField() }}
-                        <button type="submit" class="btn btn-sm btn-danger ml-2">Delete</button>
-                    </form>
+
+                    <button type="button" class="btn btn-sm btn-danger ml-3 deleteRoleClass" data-toggle="modal" data-target="#deleteRoleModal">Delete</button>
                 </td>
             </tr>
             @endeach
@@ -37,22 +35,21 @@
 </div>
  
  
- <!-- Delete User Modal-->
-<div class="modal fade" id="deleteUserModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-aria-hidden="true">
-    <div class="modal-dialog" role="document">
+ <!-- Delete Role Modal-->
+<div class="modal fade" id="deleteRoleModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
+                <h5 class="modal-title">Delete Role</h5>
+                <button class="close" type="button" data-dismiss="modal">
+                    <span>&times;</span>
                 </button>
             </div>
-            <div class="modal-body">Are you sure you want to delete this user?</div>
+            <div class="modal-body">
+                Are you sure you want to delete this role?
+            </div>
             <div class="modal-footer">
-                {{--  <form action="{{ route('dashboard.users.destroy', { id: user.id }, { qs: { _method: 'DELETE' }}) }}" method="post">
-                    <button type="submit" class="btn btn-danger" data-dismiss="modal">Delete</button>
-                </form>  --}}
+                <button type="button" class="btn btn-danger" id="confirmBtn">Confirm</button>
             </div>
         </div>
     </div>
